i add stuped register

--- a/AllTask/Star worce lore.html
+++ b/AllTask/Star worce lore.html
@@ -90,7 +90,7 @@
         <p><a href="#start_point">return to start</a></p>
         <p><a href="#chapter_1">return to chapter 1</a></p>
     </ul>
-
+    <script src="OperationWithStarWorceLore.js"></script>
 
 </div>
 </body>
