i add new chapter Crait

--- a/ControlAll/Star vorce lore/Star_worce_lore.html
+++ b/ControlAll/Star vorce lore/Star_worce_lore.html
@@ -170,6 +170,48 @@
     <br>
     <hr>
 
+    <h2 id="chapter_3">Crait</h2>
+
+    <div class="chapter3">
+        <span class="crait">
+
+            Crait was a mining planet within the Outer Rim
+            that mainly exported shipments of salt another
+            rare minerals. Before 3 ABY, the Rebel Alliance had stationed a
+            small outpost on the planet but the base was abandoned shortly before the
+            theft of the Death Star plans. The mines on this planet contained gems that
+            were used to fund both, Rebel and Resistance operations. Underneath the planets
+            plain surface which was covered in salt, Red dust was located. A few days after the
+            destruction of Starkiller Base, Resistance Skimmers fought against a phalanx of First
+            Order Heavy Assault Walkers in the planets plains and Luke Skywalker make his final stand
+            -- making his image appear to his nephew, Kylo Ren.HistoryImperial Era
+             </span>
+            <span class="crait-imag">
+                <img class="crait-imag1" src="image/crait.jpg" alt="network error">
+            </span>
+        <span class="crait1">
+        The Resistance occupying the abandoned mine again. Led by Poe Dameron and Callan Ematt
+            commanded a defence while Leia tried to contact her allies in the Outer Rim. The First
+            Order landed an assault force of eleven AT-M6s, the more modern version of Imperial AT-ATs,
+            which were overlooked by Kylo Ren's command shuttle. The First Order also brought a
+            200-metre-lomg superlaser siege cannon, which Finn discribes as a mini-Death Star.
+            It was capable of breaking open the large door of the base, allowing First Order
+            snow troopers to enter the base.
+            Poe Dameron led his ski speeders against the walkers, doing little damage.
+            The First Order launched TIE fighters, but Kylo Ren foolishly ordered them all to
+            focus on the Mellenium Falcon when it arrived from Ahch-To, piloted by Rey and Chewbacca.
+            They flew through the crystal caves, taking down the TIE squadron. Rey notices an escape
+            route behind the mine which the remaining members of the Resistance can get through.
+            As Poe noticed the ineffectiveness of the attack and calls it off. However, Finn continues a
+            kamikaze attack on the siege cannon, attempting to destroy it. Rose Tico, a resistance
+            mechanic who had helped Finn on his mission to Canto Bight, crashes into Finn and stops the
+            assault. It is unknown whether Finn's attack would have destroyed the cannon or just slowed
+            down the inevitable attack.
+        </span>
+
+
+
+    </div>
 
 
     <h3>list hero in star wars</h3>
