--- a/ControlAll/Star vorce lore/Star_worce_lore.html
+++ b/ControlAll/Star vorce lore/Star_worce_lore.html
@@ -7,8 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Star worse lore</title>
     <link rel="stylesheet" href="scratch.css">
+    <link rel="stylesheet" href="table-style.css">
 </head>
 <body>
+<div class="menu"><h2>star worse lor</h2></div>
+<div class="menu"><button class="menu-button"><a href="#option">tap</a></button></div>
 <p>
 <h1 id="start_point">Star wars</h1>
 
@@ -57,6 +60,7 @@
     Rogue Squadron, is planned for December 22, 2023, release. A number of other films, including an independent trilogy,
     are suggested to be in development.
     </span>
+
     <br>
     <br>
     <br>
@@ -102,6 +106,29 @@
                  alt="network error">
         </span>
 
+
+        <table class="tatooine-table item-tatooine">
+    <caption>test-table-tatooine</caption>
+    <tr>
+        <td>test1</td>
+        <td>test2</td>
+        <td>test3</td>
+    </tr>
+
+    <tr>
+        <td>test-complete1</td>
+        <td>test-complete2</td>
+        <td>test-complete3</td>
+    </tr>
+
+    <tr>
+        <td>test-complete1-reload</td>
+        <td>test-complete2-reload</td>
+        <td>test-complete3-reload</td>
+    </tr>
+</table>
+
+
     <br>
     <br>
     <br>
@@ -126,7 +153,7 @@
             <img class="cloudCityImage" src="./image/cloudCity.jpg" alt="network error">
             <img class="cloudCityImage1" src="./image/cloudCity1.jpg" alt="network error">
         </span>
-        <span class="cloud-city2">
+        <span class="cloud-city">
             intent of making the boy his apprentice. He arrived in the hangar where the Falcon had been docked just
             in time to see the ship leave and, recognizing it, he concocted a plan to capture it and its crew. Vader
             hoped that if he could capture and torture Skywalker's friends, the young Jedi would feel their pain
@@ -162,7 +189,28 @@
             attempt to warn Skywalker. As the group of Imperials with Organa broke off the fight and dragged
             her away, Luke attempted to follow. Just as he passed through the door where Organa had disappeared,
             it slammed shut behind him, cutting him off from R2-D2.[1]
+
         </span>
+        <table class="cloud-city-table item-cloud-city">
+            <caption>test-table-cloud-city</caption>
+            <tr>
+                <td>test1</td>
+                <td>test2</td>
+                <td>test3</td>
+            </tr>
+
+            <tr>
+                <td>test-complete1</td>
+                <td>test-complete2</td>
+                <td>test-complete3</td>
+            </tr>
+
+            <tr>
+                <td>test-complete1-reload</td>
+                <td>test-complete2-reload</td>
+                <td>test-complete3-reload</td>
+            </tr>
+        </table>
     </div>
 
     <br>
@@ -179,9 +227,11 @@
             that mainly exported shipments of salt another
             rare minerals. Before 3 ABY, the Rebel Alliance had stationed a
             small outpost on the planet but the base was abandoned shortly before the
-            theft of the Death Star plans. The mines on this planet contained gems that
+            theft of the Death Star plans. The mines on
+            this planet contained gems that
             were used to fund both, Rebel and Resistance operations. Underneath the planets
-            plain surface which was covered in salt, Red dust was located. A few days after the
+            plain surface which was covered in salt, Red
+            dust was located. A few days after the
             destruction of Starkiller Base, Resistance Skimmers fought against a phalanx of First
             Order Heavy Assault Walkers in the planets plains and Luke Skywalker make his final stand
             -- making his image appear to his nephew, Kylo Ren.HistoryImperial Era
@@ -189,7 +239,9 @@
             <span class="crait-imag">
                 <img class="crait-imag1" src="image/crait.jpg" alt="network error">
             </span>
-        <span class="crait1">
+
+
+        <span class="crait">
         The Resistance occupying the abandoned mine again. Led by Poe Dameron and Callan Ematt
             commanded a defence while Leia tried to contact her allies in the Outer Rim. The First
             Order landed an assault force of eleven AT-M6s, the more modern version of Imperial AT-ATs,
@@ -208,10 +260,29 @@
             assault. It is unknown whether Finn's attack would have destroyed the cannon or just slowed
             down the inevitable attack.
         </span>
-
-
+        </div>
 
     </div>
+    <table class="crait-table item-crait">
+        <caption>test-table-crait</caption>
+        <tr>
+            <td>test1</td>
+            <td>test2</td>
+            <td>test3</td>
+        </tr>
+
+        <tr>
+            <td>test-complete1</td>
+            <td>test-complete2</td>
+            <td>test-complete3</td>
+        </tr>
+
+        <tr>
+            <td>test-complete1-reload</td>
+            <td>test-complete2-reload</td>
+            <td>test-complete3-reload</td>
+        </tr>
+    </table>
 
 
     <h3>list hero in star wars</h3>
@@ -222,13 +293,12 @@
     </ol>
 
 
-    <ul>
+    <ul id="option">
         <p><a href="#start_point">return to start</a></p>
         <p><a href="#chapter_1">return to chapter 1 tatooine</a></p>
         <p><a href="#chapter_2">return to chapter 2 cloud city</a></p>
     </ul>
     <script src="OperationWithStarWorceLore.js"></script>
 
-</div>
 </body>
 </html>
